--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -47,7 +47,7 @@ services:
             - '5000'
         environment:
             - APP_SETTINGS=project.config.ProductionConfig
-            - DATABASE_URL=postgres://postgres:postgres@users-db:5432/users_prod
+            - DATABASE_PROD_URL=postgres://postgres:postgres@users-db:5432/users_prod
             - DATABASE_TEST_URL=postgres://postgres:postgres@users-db:5432/users_test
         depends_on:
             - users-db
