--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
 
 before_script:
     - export APP_SETTINGS="project.config.TestingConfig"
-    - export DATABASE_TEST_URL="postgresql://postgres:@localhost/users_test"
+    - export DATABASE_TEST_URL="postgresql://postgres:@users-db:5432/users_test"
     - psql -c 'create database users_test;' -U postgres
     - docker-compose up --build -d
     - python manage.py recreate_db
