--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,7 @@
 sudo: required
 
-language: python
-
-python:
-    - "3.6"
-
 services:
     - docker
-    - postgresql
 
 env:
     global:
@@ -19,15 +13,8 @@ before_install:
     - chmod +x docker-compose
     - sudo mv docker-compose /usr/local/bin
 
-install:
-    - pip install -r requirements.txt
-
 before_script:
-    - export APP_SETTINGS="project.config.TestingConfig"
-    - export DATABASE_TEST_URL="postgres://postgres:postgres@users-db:5432/users_test"
-    - psql -c 'create database users_test;' -U postgres
-    - docker-compose up --build -d
-    - python manage.py recreate_db
+    - docker-compose up -d --build
 
 script:
     - docker-compose run users-service python manage.py test
